Added modal and button to show it.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="index.css">
 		<title>D.M. &amp; C.S.</title>
+		<script src="index.js" charset="utf-8"></script>
 	</head>
 	<body>
 		<p>Initial commit</p>
+		<button class="sign-up">
+			Sign Up
+		</button>
+		<section class="modal-container">
+			<div class="modal">
+				This is the modal
+			</div>
+		</section>
 	</body>
 </html>
