--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 		</button>
 		<section class="modal-container">
 			<div class="modal">
-				This is the modal
+				<p class="desc">Enter your name and email address to sign up for the competition!</p>
+				<label>Name <input type="text" name="name"></label>
+				<label>Email address <input type="email" name="email"></label>
 			</div>
 		</section>
 	</body>
