--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0,
+		minimum-scale=1.0, maximum-scale=10.0, user-scalable=yes" />
 		<link rel="stylesheet" href="index.css">
 		<title>D.M. &amp; C.S.</title>
 		<script src="index.js" charset="utf-8"></script>
 	</head>
 	<body>
-		<p>Initial commit</p>
+		<section class="banner">
+			<div class="title-box">
+				<h1 class="title">CS-260 Hackathon 2017</h1>
+				<h2 class="subtitle">Think you have what it takes to be the class champ? Prove it!</h2>
+			</div>
+		</section>
 		<button class="sign-up">
 			Sign Up
 		</button>
@@ -15,7 +22,7 @@
 			<div class="modal">
 				<p class="desc">Enter your name and email address to sign up for the competition!</p>
 				<label>Name <input type="text" name="name"></label>
-				<label>Email address <input type="email" name="email"></label>
+				<label>Email <input type="email" name="email"></label>
 			</div>
 		</section>
 	</body>
