add about section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 				<h2 class="subtitle">Think you have what it takes to be the class champ? Prove it!</h2>
 			</div>
 		</section>
+		<section class="content about">
+			<h1>About</h1>
+			<p>
+				CS-260 is a web programming course offered at Brigham Young University. In order to encourage students to apply the skills they are learning, we will be holding our first ever hackathon for this course. Students may feel free to be creative with their projects and show off their skills to the class &mdash; as well as the professor, Mark Clement.
+			</p>
+			<h2>Contact us here: <a href="mailto:clement@cs.byu.edu">clement@cs.byu.edu</a></h2>
+		</section>
 		<button class="sign-up">
 			Sign Up
 		</button>
