--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
 		<button class="sign-up">
 			Sign Up
 		</button>
+		<section class="content rules">
+			<h1>Rules</h1>
+			<ul>
+				<li>You may work with other students, but <strong>you must write your own code</strong>. (Just like traditional CS labs.)</li>
+				<li>You may code in <strong>any language</strong>.</li>
+				<li>You must <strong>submit your source code</strong> with your solutions to the problems.</li>
+				<li>The contest will end at 11:59pm on the last day of class, <strong>14 Dec 2017</strong>.</li>
+				<li><strong>You may not share code or distribute any problems or answers anywhere on the internet.</strong></li>
+			</ul>
+		</section>
 		<section class="modal-container">
 			<div class="modal">
 				<p class="desc">Enter your name and email address to sign up for the competition!</p>
