Changed last bullet in Rules to be italicized

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<li>You may code in <strong>any language</strong>.</li>
 				<li>You must <strong>submit your source code</strong> with your solutions to the problems.</li>
 				<li>The contest will end at 11:59pm on the last day of class, <strong>14 Dec 2017</strong>.</li>
-				<li><strong>You may not share code or distribute any problems or answers anywhere on the internet.</strong></li>
+				<li><em>You may not share code or distribute any problems or answers anywhere on the internet.</em></li>
 			</ul>
 		</section>
 		<section class="modal-container">
