add prizes section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
 				<li><em>You may not share code or distribute any problems or answers anywhere on the internet.</em></li>
 			</ul>
 		</section>
+		<section class="content prizes">
+			<h1>Prizes</h1>
+			<ul>
+				<li>1st Place: $500 Gift Card to Best Buy</li>
+				<li>2nd Place: $25 Gift Card to Chili's</li>
+				<li>3rd Place: Free Laptop Sticker</li>
+			</ul>
+			<p><strong>Bonus!!</strong> All three winners get an <strong>A</strong> for the course!</p>
+		</section>
 		<section class="modal-container">
 			<div class="modal">
 				<p class="desc">Enter your name and email address to sign up for the competition!</p>
